# lincoln

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_fulltext_search.py  0003_users_table.py
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  documents.py  invoices.py  router.py  transactions.py
app/core/: config.py  exceptions.py  logging.py  middleware.py  security.py
app/db/: session.py
app/db/models/: __init__.py  document.py  invoice.py  line_item.py  transaction.py  user.py
app/parsers/: base.py  csv_statement.py  normalizers.py  pdf_invoice.py  registry.py
app/schemas/: document.py  invoice.py  line_item.py  transaction.py
app/scripts/: seed.py
app/services/: document_service.py  invoice_service.py  transaction_service.py
app/storage/: base.py  local.py
app/worker/: celery_app.py  tasks.py
chat_history/: session_2026_05_15.md
deployment/: aws.md  docker-compose.vps.yml  prometheus-scrape.yml  render.md  vps-setup.md
monitoring/: prometheus.yml
plans/: implementation_plan.md  optional_objectives.md  pdf_parsing_improvements.md  test_coverage_plan.md  ui_plan.md
test-samples/: generate_pdfs.py
tests/: conftest.py
tests/integration/: conftest.py  test_document_flows.py
tests/unit/: conftest.py  test_models.py  test_security.py  test_storage.py
tests/unit/api/: conftest.py  test_auth_routes.py  (+3 more)
ui/: app.js  index.html  style.css
work/: question.md
(+8 files in other folders)
