[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lincoln"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "python-dateutil>=2.9.0",
    "babel>=2.14.0",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
